# job-rotation-app-backend/openApiSpec.yml
@@ -128,6 +128,37 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
+  /employee/available-roles/filter:
+    get:
+      tags:
+        - Employee Actions
+      parameters:
+        - name: grade
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: department
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: duration
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListAllRolesResponse'
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
   /employee/available-roles/{roleId}:
     get:
       tags:
@@ -194,7 +225,7 @@ paths:
   /staffing-manager/available-roles/{grade}:
     get:
       tags:
-        - Staffing Manager Actions  
+        - Staffing Manager Actions
       parameters:
         - name: grade
           in: path
@@ -228,7 +259,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ListAllRolesResponse'          
+                $ref: '#/components/schemas/ListAllRolesResponse'
         '400':
           description: Bad Request
         '500':
@@ -249,7 +280,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ListAllRolesResponse'  
+                $ref: '#/components/schemas/ListAllRolesResponse'
         '400':
           description: Bad Request
         '500':
@@ -367,7 +398,7 @@ paths:
             type: string
       responses:
         '200':
-          description: OK 
+          description: OK
         '400':
           description: Bad Request
         '500':
