# job-rotation-app-backend/src/main/java/project/job_rotation_app/dto/RoleInformationDto.java
@@ -1,0 +1,20 @@
+package project.job_rotation_app.dto;
+
+
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+public class RoleInformationDto {
+
+  private String roleId;
+  private String roleName;
+  private String gradeRequired;
+  private String staffingManagerEmailAddress;
+  private String department;
+  private String duration;
+  private String jobDescription;
+}
